# riichi_calculator

./: .gitignore  CMakeLists.txt  README.md
docs/: doxyfile_riichi_calculator
src/: CMakeLists.txt  definitions.hpp  group.cpp  group.hpp  main.cpp  tile.cpp  tile.hpp  tile_group.cpp  tile_group.hpp  tiles_group.cpp  tiles_group.hpp
test/: CMakeLists.txt  empty_test.cpp  test_group.cpp  test_tile.cpp
